fixed spacing between sections

--- a/.docker-config/node/src/styles/components/tutorialComponents/section.scss
+++ b/.docker-config/node/src/styles/components/tutorialComponents/section.scss
@@ -6,7 +6,7 @@
 
   .section-grid {
     display: grid;
-    grid-template-rows: 2vw 1fr 2vw;
+    grid-template-rows: 15px 1fr 15px;
     grid-template-columns: 5vw 1fr 5vw;
   }
 
